fixed body overflow scrolling

--- a/css/ui.css
+++ b/css/ui.css
@@ -1,6 +1,6 @@
 :not(input, textarea),svg { -moz-user-select:none;user-select:none;-webkit-user-select:none; }
 /*input, textarea { -moz-user-select:text;user-select:text;-webkit-user-select:text; }*/
-body { width:100%;height:100%;margin:0;overflow:hidden; }
+body { width:100%;height:100%;margin:0; }
 input,select,textarea { }
 td input { width:98%; margin:0;}
 a,.tab,.button,.collapsible>h3 { cursor:pointer; }
